# ncnn-android-pose

./: README.md  gestaltxu-keystore.jks  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/ncnnhpe/: MainActivity.java  NcnnModel.java
app/src/main/java/com/tencent/ncnnyolox/: MainActivity.java  NcnnModel.java
app/src/main/jni/: CMakeLists.txt  imageobject.h  mspn.cpp  mspn.h  ncnnmodel.cpp  yolox.cpp  yolox.h
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
